tests/fixtures/invalid/bool_mod_bytes.py
# Cannot modulo Bool and Bytes
x: bool = True % b"hello"
